Simple fix for non-readable dropdowns on mobile

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
   --attr-box-gap:8px;
   --add-btn-size:28px;
   --button-size:43px;
-  --mobile-edit-additional-height:80px;
+  --mobile-edit-additional-height:170px;
 
   --font-family:Segoe UI, Roboto, Arial, sans-serif;
   /*--font-weight:500;*/
@@ -391,7 +391,7 @@ textarea::placeholder{color:var(--text-suggestion);}
     padding:12px;
     border-radius:8px;
     box-shadow:0 -2px 12px rgba(0,0,0,0.12);
-    z-index:100;
+    z-index:50;
   }
   textarea.other-player{min-height:80px;}
   .container.padding-in{
